--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*https://www.w3schools.com/w3css/tryw3css_templates_architect.htm */
+
 html
 { height: 100%;}
 
@@ -158,13 +160,16 @@ ol li
 
 .section_heading {
     border-bottom: 1px solid #ccc!important;
+    width: 98%;
 }
 
-.team_member_bio {
+.team_member_bio, .lab_link {
     width: 18%;
     float: left;
     padding: 0 8px;
 }
+
+.lab_link {position: relative;}
 
 .team_member_bio h4, p {
     color: black;
@@ -180,13 +185,55 @@ ol li
 }
 
 .headshot {
-    vertical-align: middle;
+    display: block;
+    margin:auto;
+    max-width: 100%;
+    width: 200px;
+    height: 200px;
+    max-height: 200px;
+    overflow: hidden;
+}
+
+.lab_image { /*fix with actual images*/
+    display: block;
+    margin:auto;
     width: 100%;
+    height: 200px;
+    max-height: 200px;
+    overflow: hidden;
+}
+
+.lab_label {
+    color: #FFF;
+    background-color: #000;
+    padding: 8px 16px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 8px;
+    font-size: 20px;
+    font-family: Palatino Linotype;
 }
 
 /*#main, */#header, #logo, #menubar, #site_content, #footer
 { margin-left: auto; 
   margin-right: auto;}
+
+/*Make youtube relative*/
+.youtube-container {
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    }
+
+.youtube-container iframe {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+}
 
 #main
 { width: 100%;
@@ -301,7 +348,7 @@ ul#menu li a:hover
 
 #content
 { text-align: left;
-  width: 100%;
+  width:100%;
   float: left;
   padding: 20px 20px 15px 20px;}
 
