--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ ol li
 }
 
 .lab_link {
-    width: 30%;
+    width: 18%;
     float: left;
     padding: 8px;
     height: 200px;
@@ -178,6 +178,8 @@ ol li
 
 .briefing_wrapper {
     float: left;
+    width: 100%;
+    padding: 0 0 16px 0;
 }
 
 .lab_link {position: relative;}
@@ -241,6 +243,8 @@ ol li
     margin: auto;
     font-size: 20px;
     font-family: Palatino Linotype;
+    float: left;
+    width: fit-content;
 }
 
 /*#main, */#header, #logo, #menubar, #site_content, #footer
